objects/Collateral_Relationship__c.object
<CustomObject>
    <customHelpPage>Collateral_Management</customHelpPage>
    <fields>
        <fullName>Acm_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Acm External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collateral_Status__c</fullName>
        <formula>TEXT( Collateral__r.Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collateral Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Type__c</fullName>
        <formula>Collateral__r.Collateral_Type1__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collateral Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Value_Type__c</fullName>
        <formula>TEXT( Collateral__r.Value_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collateral Value Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Value__c</fullName>
        <formula>Collateral__r.Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collateral Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Collateral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collateral</label>
        <referenceTo>Collateral__c</referenceTo>
        <relationshipLabel>Collateral Relationship</relationshipLabel>
        <relationshipName>Collateral_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Beneficiary</fullName>
                    <label>Beneficiary/Borrower</label>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>Borrower</fullName>
                    <isActive>false</isActive>
                    <label>Borrower</label>
                </value>
                <value>
                    <fullName>Issuer</fullName>
                    <isActive>false</isActive>
                    <label>Issuer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Collateral</relationshipLabel>
        <relationshipName>Collateral_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_SDS_CIF__c</fullName>
        <label>Source SDS CIF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isPrimaryRelationship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPrimaryRelationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>remediation_message__c</fullName>
        <label>source remediation message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>remediation_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>source remediation required</label>
        <type>Checkbox</type>
    </fields>
    <label>Collateral Relationship</label>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Collateral Relationship #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collateral Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>KYC_Relationship</fullName>
        <active>true</active>
        <description>User should be prevented from linking a relationship that does not have an SDS ID and CIF ID</description>
        <errorConditionFormula>ISBLANK(Relationship__r.SDS__c) &amp;&amp; ISBLANK(Relationship__r.CIF__c)</errorConditionFormula>
        <errorDisplayField>Relationship__c</errorDisplayField>
        <errorMessage>Please ensure that the Relationship has an SDS ID or CIF ID</errorMessage>
    </validationRules>
</CustomObject>